Made several changes so that mvn commands could run